me falto cambiar la direccion xd

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image">
                 
-                <div class="placeholder-image"><img src="assets/Perfil.jpg" alt=""></div>
+                <div class="placeholder-image"><img src="assets/perfil.jpeg" alt=""></div>
             </div>
         </section>
 
