--- a/html/hospital-project.html
+++ b/html/hospital-project.html
@@ -64,17 +64,17 @@
                 <div class="gallery-container">
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
-                            <div class="placeholder-text">Vista Principal</div>
+                            <div class="placeholder-text"><img src="../assets/bloom salud inicio.png" alt="Vista principal de Hospital Bloom"></div>
                         </div>
                     </div>
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
-                            <div class="placeholder-text">Gestión de Pacientes</div>
+                            <div class="placeholder-text"><img src="../assets/bloom salud interfaz.png" alt="Interfaz de Gestión de Pacientes"></div>
                         </div>
                     </div>
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
-                            <div class="placeholder-text">Estadísticas Médicas</div>
+                            <div class="placeholder-text"><img src="../assets/bloom salud estadisticas.png" alt="Panel de Estadísticas Médicas"></div>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                 <div class="next-projects-grid">
                     <a href="isss-project.html" class="next-project-card">
                         <div class="next-project-image">
-                            <div class="placeholder-project"></div>
+                            <div class="placeholder-project"><img src="../assets/LOGO AZUL.png" alt="Logo ISSS Salud"></div>
                         </div>
                         <div class="next-project-info">
                             <h3>ISSS Salud</h3>
@@ -190,7 +190,7 @@
                     </a>
                     <a href="workfinder-project.html" class="next-project-card">
                         <div class="next-project-image">
-                            <div class="placeholder-project"></div>
+                            <div class="placeholder-project"><img src="../assets/Work Finder-1 02 Artboard 4.png" alt="Logo WorkFinder"></div>
                         </div>
                         <div class="next-project-info">
                             <h3>WorkFinder</h3>
@@ -208,9 +208,7 @@
                 <p>&copy; 2025 Portafolio de Ricardo Daniel Garcia Pocasangre. Todos los derechos reservados.</p>
             </div>
             <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/Xx-pocasangre-xX" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
