--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image">
                 
-                <div class="placeholder-image"><img src="assets/perfil.jpeg" alt=""></div>
+                <div class="placeholder-image"><img src="assets/Perfil.png" alt=""></div>
             </div>
         </section>
 
@@ -312,9 +312,7 @@
                 <p>&copy; 2025 Portafolio de Ricardo Daniel Garcia Pocasangre. Todos los derechos reservados.</p>
             </div>
             <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/Xx-pocasangre-xX" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
