--- a/html/workfinder-project.html
+++ b/html/workfinder-project.html
@@ -197,9 +197,7 @@
                 <p>&copy; 2025 Portafolio de Ricardo Daniel Garcia Pocasangre. Todos los derechos reservados.</p>
             </div>
             <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/Xx-pocasangre-xX" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
