--- a/html/homeclick-project.html
+++ b/html/homeclick-project.html
@@ -48,7 +48,7 @@
                     <span>MERN Stack</span>
                 </div>
                 <div class="project-links-header">
-                    <a href="https://github.com/Xx-pocasangre-xX" target="_blank" class="github-link">
+                    <a href="https://github.com/xxDianaPadilla/homeClick" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> Ver Repositorio
                     </a>
                 </div>
