--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
                                         <span>JWT</span>
                                     </div>
                                     <div class="carousel-project-links">
+                                        <a href="https://github.com/xxDianaPadilla/homeClick" target="_blank"
+                                            class="carousel-project-link"><i class="fab fa-github"></i> Repositorio</a>
                                         <a href="html/homeclick-project.html" class="carousel-project-link primary">Ver
                                             Detalles</a>
                                     </div>
